--- a/package.json
+++ b/package.json
@@ -2,12 +2,12 @@
   "name": "blog",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "api/index.js",
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js",
-    "dev": "nodemon index.js"
+    "start": "node api/index.js",
+    "dev": "nodemon api/index.js"
   },
   "author": "Mari",
   "license": "ISC",
@@ -17,6 +17,9 @@
     "dotenv": "^16.4.5",
     "express": "^4.18.2",
     "express-validator": "^7.0.1",
+    "firebase": "^10.12.5",
+    "firebase-admin": "^12.3.0",
+    "gridfs-stream": "^1.1.1",
     "joi": "^17.12.1",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.8.0",
